# Chainge-Kernel

./: .gitignore  CONVENTIONS.md  Cargo.toml  README.md  SPEC.md  SPEC_V0.md
crates/chainge-kernel/: Cargo.toml
crates/chainge-kernel-core/: Cargo.toml
crates/chainge-kernel-core/src/: canonical.rs  crypto.rs  error.rs  lib.rs  receipt.rs  stream.rs  types.rs  validation.rs
crates/chainge-kernel-perms/: Cargo.toml
crates/chainge-kernel-perms/src/: crypto.rs  envelope.rs  error.rs  grant.rs  keyshare.rs  lib.rs  state.rs
crates/chainge-kernel-store/: Cargo.toml
crates/chainge-kernel-store/src/: error.rs  lib.rs  memory.rs  migration.rs  sqlite.rs  traits.rs
crates/chainge-kernel-sync/: Cargo.toml
crates/chainge-kernel-sync/src/: convergence.rs  error.rs  lib.rs  messages.rs  protocol.rs  transport.rs
crates/chainge-kernel-testkit/: Cargo.toml
crates/chainge-kernel-testkit/src/: fixtures.rs  generators.rs  lib.rs  vectors.rs
crates/chainge-kernel/src/: canonical.rs  crypto.rs  error.rs  kernel.rs  lib.rs  receipt.rs  store.rs
crates/chainge-kernel/tests/: golden.rs  golden_vectors.json
docs/: ANALYSIS_FRAMEWORK.md  DAG_SEMANTICS.md  ERIC_YARMO_AXIOMS.md  MANIFESTO.md  ORIGIN_MANIFESTO.md
docs/projects/: PROJECT_BUDS.md  PROJECT_CHAINGE_NODE.md  PROJECT_FRONTIER_INDEX.md  PROJECT_REPLAY_KERNEL.md  PROJECT_STL_FOOD_AGENT.md  PROJECT_STREAMS.md  PROJECT_THEMOVE.md
tests/: golden_vectors.json
