[workspace]
resolver = "2"
members = ["crates/chainge-kernel"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chainge/kernel"
rust-version = "1.75"

[workspace.dependencies]
# Cryptography
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

# Serialization
ciborium = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Utilities
bytes = "1.5"
hex = "0.4"

# Testing
proptest = "1.4"

[profile.release]
lto = true
codegen-units = 1
