[package]
name = "chainge-kernel-perms"
description = "Permissions, grants, and encrypted payload sharing for the Chainge Kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chainge-kernel-core.workspace = true

# Cryptography
blake3.workspace = true
x25519-dalek.workspace = true
chacha20poly1305.workspace = true
rand.workspace = true

# Serialization
ciborium.workspace = true
serde.workspace = true

# Error handling
thiserror.workspace = true

# Utilities
bytes.workspace = true

[dev-dependencies]
proptest.workspace = true
