[package]
name = "chainge-kernel-testkit"
description = "Testing utilities, golden vectors, and fuzz harnesses for the Chainge Kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chainge-kernel-core.workspace = true
chainge-kernel-store.workspace = true
chainge-kernel-sync.workspace = true
chainge-kernel-perms.workspace = true
chainge-kernel.workspace = true

# Cryptography
rand.workspace = true
ed25519-dalek.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Testing
proptest.workspace = true

# Utilities
hex.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "canonical"
harness = false
