[package]
name = "chainge-kernel"
description = "Minimal cryptographic kernel for verifiable receipts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sha2.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
ciborium.workspace = true
thiserror.workspace = true
hex.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
